2012-08-21  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Makefile.am: Added music/interval_table.hh,
	music/ordered_ilist.hh.

	* music/interval_table.hh, music/ordered_ilist.hh: New files.

	* music/event_router.hh: Use new IntervalTable template.

2012-08-19  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/event_routing_map.hh, event_routing_map.cc
	(EventRoutingMap::build): Removed. Replaced by fillRouter which is
	now public.

	music/port.hh (EventOutputPort::setupCleanup), port.cc
	(EventOutputPort::buildTable), connector.cc
	(EventInputCollectiveConnector::spatialNegotiation): Use
	EventRoutingMap::fillRouter and call EventRouter::buildTable
	directly. Delete the event routing map before calling buildTable
	so that the data structures used by buildTable don't co-exist in
	memory with the event routing map.

2012-08-18  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/interval_tree.hh, music/collector.hh, collector.cc,
	music/distributor.hh, distributor.cc, event_routing_map.cc:
	Separated the template DataType parameter of IntervalTree into
	IntervalType and DataType.

	* Makefile.am, music/event_routing_map.hh, event_routing_map.cc,
	music/connector.hh, music/port.hh: Renamed
	event_routingmap.{cc,hh} -> event_routing_map.{cc,hh}.

	* music/interval_tree.hh: Optimized memory usage.

2012-08-17  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/index_map.hh, music/interval.hh: Removed clone().

	* connector.cc, music/event_router.hh, event_router.cc,
	event_routingmap.cc, music/event.hh: Removal of indirection and
	virtual pointers for IndexProcessors.

	* music/event_router, event_router.cc: Removed unused member Data ().

	* interval.hh, music/event_router.hh, event_router.cc,
	event_routingmap.cc: Simplifications enabled by previous changes.

	* music/event_router.hh, event_router.cc: Removed indirection
	(pointer) to EventRoutingData from the IntervalTree through the
	use of templates.

	* port.cc: Let type dispatch happen here instead of in the