@@ -1,5 +1,10 @@
 2012-08-21  Mikael Djurfeldt  <mikael@djurfeldt.com>
 
+	* runtime.cc (Runtime::tick): Only access first element of
+	schedule if non-empty.
+	(Runtime::finalize): Only do schedule-related processing if
+	schedule initially non-empty.
+
 	* Makefile.am: Added music/interval_table.hh,
 	music/ordered_ilist.hh.
 
